sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: not found: value &
      if (!plusPetitQue(a,v)){&
                              ^AlgInsertionSort:13: error: reassignment to val
      i=i-1;
       ^AlgInsertionSort:17: error: not found: value v
    setValeur(a,v)
                ^